Remove unused code from old Manager Usecase